--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,7 @@ nav{
     display: flex;
      justify-content: space-between;
      align-items: center;
+     margin: 0px 200px;
 }
 .nav-titel{
     color: black;
@@ -36,4 +37,16 @@ nav a{
     text-decoration: none;
     color: #474747;
 }
-nav >
+.hearder{
+    background-color: #FFF8F3;
+   
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 400px;
+     
+}
