--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,6 +14,21 @@ font-family: 'Open Sans', sans-serif;
     font-weight: 700px;
     padding: 15px 30px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: Open sans;
+    font-size: 18px;
+
+}
 nav{
     display: flex;
      justify-content: space-between;
@@ -39,14 +54,36 @@ nav a{
 }
 .hearder{
     background-color: #FFF8F3;
-   
+    background-image: url('../images/header_bg.png');
+   background-repeat: no-repeat;
 }
 .banner{
     padding: 30px 30px 30px 150px;
     display: flex;
     align-items: center;
-}
+justify-content: space-between;}
 .banner .profile-pic{
     width: 400px;
      
+}
+.banner-gretting{
+font-size: 40px;
+color: #474747;
+margin-bottom: 0;
+}
+.banner-heading{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 200px;
+}
+.banner-discription{
+ max-width: 500px;   
+} 
+.about{
+    text-align: center;
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
 }
