--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -87,3 +87,17 @@ margin-bottom: 0;
     background: #FFF8F3;
     margin: 130px 0;
 }
+
+/* main style */
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+
+}
+.about-info{
+    text-align: center;
+}
