--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,23 +1,26 @@
-*{
+/* *{
     padding: 10px;
     margin: 10px;
-}
+} */
 body{
 font-family: 'Open Sans', sans-serif;
+font-family: sans-serif;
 }
 /* nev related style */
 .text-primary{
     color: #FD6E0A;
+    margin: 0px;
 }
+
 .btn-primary{
     border-radius: 5px;
     background: #FD6E0A;
 
-    border: 0px;
+    border: 0;
     font-size: 20px;
     color: white;
-    font-weight: 500px;
-    padding: 15px 20px;
+    font-weight: 700px;
+    padding: 15px 30px;
 }
 .section-title{
     color: #181818;
@@ -31,8 +34,8 @@ font-family: 'Open Sans', sans-serif;
     color: #757575;
     text-align: center;
     font-size: Open sans;
-    font-size: 18px;
-
+    font-size: 182px;
+    /* padding: 20px 40px 60px 100px; */
 }
 nav{
     display: flex;
@@ -51,29 +54,32 @@ nav > ui{
 }
 nav li{
     list-style: none;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 nav a{
     text-decoration: none;
     color: #474747;
 }
-.hearder{
-    background-color: #e67f37;
+.header{
+    background-color: #FFF8F3;
     background-image: url('../images/header_bg.png'), url('../images/developer.png');
    background-repeat: no-repeat;
-   background-position: bottom right;
+   background-position: bottom right, top left ;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 0px 100px 0px 30px;
     display: flex;
     align-items: center;
 justify-content: space-between;}
+.banner-contant{
+    text-align: center;
+}
 .banner .profile-pic{
     width: 400px;
      
 }
 .banner-gretting{
-font-size: 40px;
+font-size: 45px;
 color: #474747;
 margin-bottom: 0;
 }
@@ -81,10 +87,12 @@ margin-bottom: 0;
     font-size: 85px;
     font-weight: 700;
     margin-top: 5px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 .banner-discription{
- max-width: 500px;   
+    text-align: center;
+    font-size: 10px;
+ max-width: 585px;   
 } 
 .about{
     text-align: center;
@@ -108,7 +116,8 @@ margin-bottom: 0;
 .about-info{
     text-align: center;
 }
-#what-i-don-description{
+#what-i-do-description{
+    margin-bottom: 100px;
     padding: 30px 150px;
 
 }
@@ -121,20 +130,27 @@ margin-bottom: 0;
     
 }
 .skill{
-    items-aline
-    border-radius: 5px;
+    margin-right: 40px;
+    margin-left: 40px;
+    /* margin-top: 100px; */
+    /* items-aline: ; */
+    /* align-items: 30px 30px 40px 60px; */
+    /* border-radius: 5px; */
     background: #FFF;
-    box-shadow: 0px 2px 1px 0px color(white
+    padding-inline: 20px px 0px 0px color(white
     );
-    .ru
+    
 }
 .resume-colom{
+    margin-top: 100px;
     color: #474747;
     font-size: 30px;
     font-weight: 700;
 }
 .resume-container{
+    margin-top: 100px;
     display: flex;
+    padding: 10px 30px 40px 60px;
 }
 .resume-item-institute, .rusume-item-description{
     color: #757575;
@@ -157,6 +173,7 @@ footer
     padding: 130px 200px;
     margin-top: 100px;
 }
+
 /* .footer-item{
     display: flex;
 } */
